# Text-Editor

./: CMakeLists.txt  Editor.cpp  Editor.h  ReadMe.md  Text.cpp  Text.h  main.cpp
